mgmt/us-prod-siem-v2/helm/loki-base/kustomize/tenants/se-team/collectors/aditya-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-aditya-collector
  namespace: tenant-se-team
  annotations:
    tenant: se-team
    collector: aditya-collector
    type: http
spec:
  selector:
    app: http-aditya-collector
  ports:
  - port: 8080
    targetPort: 8080
